--- a/AlphabetSoupCharity_Optimization.ipynb
+++ b/AlphabetSoupCharity_Optimization.ipynb
@@ -2002,6 +2002,258 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_6 (Dense)              (None, 50)                150       \n",
+      "_________________________________________________________________\n",
+      "dense_7 (Dense)              (None, 25)                1275      \n",
+      "_________________________________________________________________\n",
+      "dense_8 (Dense)              (None, 1)                 26        \n",
+      "=================================================================\n",
+      "Total params: 1,451\n",
+      "Trainable params: 1,451\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "dim = 2\n",
+    "h1 = 50\n",
+    "h2 = 25\n",
+    "\n",
+    "nn = tf.keras.models.Sequential()\n",
+    "\n",
+    "# First hidden layer\n",
+    "nn.add(tf.keras.layers.Dense(input_dim=dim, units=h1, activation='tanh'))\n",
+    "\n",
+    "# Second hidden layer\n",
+    "nn.add(tf.keras.layers.Dense(units=h2, activation='relu'))\n",
+    "\n",
+    "# Output layer\n",
+    "nn.add(tf.keras.layers.Dense(units=1, activation='sigmoid'))\n",
+    "\n",
+    "# Check the structure of the model\n",
+    "nn.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compile the model\n",
+    "nn.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/75\n",
+      "804/804 [==============================] - 1s 499us/step - loss: 0.6408 - accuracy: 0.6347\n",
+      "Epoch 2/75\n",
+      "804/804 [==============================] - 0s 517us/step - loss: 0.6250 - accuracy: 0.6545\n",
+      "Epoch 3/75\n",
+      "804/804 [==============================] - 0s 510us/step - loss: 0.6202 - accuracy: 0.6625\n",
+      "Epoch 4/75\n",
+      "804/804 [==============================] - 0s 502us/step - loss: 0.6177 - accuracy: 0.6642\n",
+      "Epoch 5/75\n",
+      "804/804 [==============================] - 0s 516us/step - loss: 0.6163 - accuracy: 0.6623\n",
+      "Epoch 6/75\n",
+      "804/804 [==============================] - 0s 487us/step - loss: 0.6146 - accuracy: 0.6661\n",
+      "Epoch 7/75\n",
+      "804/804 [==============================] - 0s 485us/step - loss: 0.6133 - accuracy: 0.6645\n",
+      "Epoch 8/75\n",
+      "804/804 [==============================] - 0s 489us/step - loss: 0.6124 - accuracy: 0.6657\n",
+      "Epoch 9/75\n",
+      "804/804 [==============================] - 0s 489us/step - loss: 0.6109 - accuracy: 0.6653\n",
+      "Epoch 10/75\n",
+      "804/804 [==============================] - 0s 490us/step - loss: 0.6099 - accuracy: 0.6672\n",
+      "Epoch 11/75\n",
+      "804/804 [==============================] - 0s 494us/step - loss: 0.6080 - accuracy: 0.6703\n",
+      "Epoch 12/75\n",
+      "804/804 [==============================] - 0s 491us/step - loss: 0.6088 - accuracy: 0.6702\n",
+      "Epoch 13/75\n",
+      "804/804 [==============================] - 0s 491us/step - loss: 0.6066 - accuracy: 0.6721\n",
+      "Epoch 14/75\n",
+      "804/804 [==============================] - 0s 482us/step - loss: 0.6065 - accuracy: 0.6730\n",
+      "Epoch 15/75\n",
+      "804/804 [==============================] - 0s 486us/step - loss: 0.6052 - accuracy: 0.6742\n",
+      "Epoch 16/75\n",
+      "804/804 [==============================] - 0s 492us/step - loss: 0.6045 - accuracy: 0.6738\n",
+      "Epoch 17/75\n",
+      "804/804 [==============================] - 0s 491us/step - loss: 0.6039 - accuracy: 0.6758\n",
+      "Epoch 18/75\n",
+      "804/804 [==============================] - 0s 509us/step - loss: 0.6034 - accuracy: 0.6761\n",
+      "Epoch 19/75\n",
+      "804/804 [==============================] - 0s 504us/step - loss: 0.6021 - accuracy: 0.6751\n",
+      "Epoch 20/75\n",
+      "804/804 [==============================] - 0s 497us/step - loss: 0.6016 - accuracy: 0.6785\n",
+      "Epoch 21/75\n",
+      "804/804 [==============================] - 0s 503us/step - loss: 0.6011 - accuracy: 0.6794\n",
+      "Epoch 22/75\n",
+      "804/804 [==============================] - 0s 484us/step - loss: 0.5988 - accuracy: 0.6823\n",
+      "Epoch 23/75\n",
+      "804/804 [==============================] - 0s 489us/step - loss: 0.5989 - accuracy: 0.6821\n",
+      "Epoch 24/75\n",
+      "804/804 [==============================] - 0s 483us/step - loss: 0.5992 - accuracy: 0.6792\n",
+      "Epoch 25/75\n",
+      "804/804 [==============================] - 0s 485us/step - loss: 0.5977 - accuracy: 0.6796\n",
+      "Epoch 26/75\n",
+      "804/804 [==============================] - 0s 486us/step - loss: 0.5973 - accuracy: 0.6847\n",
+      "Epoch 27/75\n",
+      "804/804 [==============================] - 0s 493us/step - loss: 0.5964 - accuracy: 0.6847\n",
+      "Epoch 28/75\n",
+      "804/804 [==============================] - 0s 505us/step - loss: 0.5958 - accuracy: 0.6861\n",
+      "Epoch 29/75\n",
+      "804/804 [==============================] - 0s 512us/step - loss: 0.5955 - accuracy: 0.6862\n",
+      "Epoch 30/75\n",
+      "804/804 [==============================] - 0s 502us/step - loss: 0.5961 - accuracy: 0.6857\n",
+      "Epoch 31/75\n",
+      "804/804 [==============================] - 0s 512us/step - loss: 0.5953 - accuracy: 0.6868\n",
+      "Epoch 32/75\n",
+      "804/804 [==============================] - 0s 507us/step - loss: 0.5936 - accuracy: 0.6882\n",
+      "Epoch 33/75\n",
+      "804/804 [==============================] - 0s 506us/step - loss: 0.5937 - accuracy: 0.6901\n",
+      "Epoch 34/75\n",
+      "804/804 [==============================] - 0s 501us/step - loss: 0.5935 - accuracy: 0.6865\n",
+      "Epoch 35/75\n",
+      "804/804 [==============================] - 0s 503us/step - loss: 0.5920 - accuracy: 0.6922\n",
+      "Epoch 36/75\n",
+      "804/804 [==============================] - 0s 495us/step - loss: 0.5926 - accuracy: 0.6883\n",
+      "Epoch 37/75\n",
+      "804/804 [==============================] - 0s 498us/step - loss: 0.5915 - accuracy: 0.6918\n",
+      "Epoch 38/75\n",
+      "804/804 [==============================] - 0s 496us/step - loss: 0.5915 - accuracy: 0.6922\n",
+      "Epoch 39/75\n",
+      "804/804 [==============================] - 0s 497us/step - loss: 0.5910 - accuracy: 0.6922\n",
+      "Epoch 40/75\n",
+      "804/804 [==============================] - 0s 496us/step - loss: 0.5915 - accuracy: 0.6913\n",
+      "Epoch 41/75\n",
+      "804/804 [==============================] - 0s 494us/step - loss: 0.5899 - accuracy: 0.6906\n",
+      "Epoch 42/75\n",
+      "804/804 [==============================] - 0s 492us/step - loss: 0.5900 - accuracy: 0.6923\n",
+      "Epoch 43/75\n",
+      "804/804 [==============================] - 0s 494us/step - loss: 0.5895 - accuracy: 0.6938\n",
+      "Epoch 44/75\n",
+      "804/804 [==============================] - 0s 495us/step - loss: 0.5889 - accuracy: 0.6936\n",
+      "Epoch 45/75\n",
+      "804/804 [==============================] - 0s 495us/step - loss: 0.5877 - accuracy: 0.6948\n",
+      "Epoch 46/75\n",
+      "804/804 [==============================] - 0s 504us/step - loss: 0.5888 - accuracy: 0.6938\n",
+      "Epoch 47/75\n",
+      "804/804 [==============================] - 0s 496us/step - loss: 0.5886 - accuracy: 0.6955\n",
+      "Epoch 48/75\n",
+      "804/804 [==============================] - 0s 502us/step - loss: 0.5878 - accuracy: 0.6950\n",
+      "Epoch 49/75\n",
+      "804/804 [==============================] - 0s 506us/step - loss: 0.5876 - accuracy: 0.6930\n",
+      "Epoch 50/75\n",
+      "804/804 [==============================] - 0s 502us/step - loss: 0.5882 - accuracy: 0.6926\n",
+      "Epoch 51/75\n",
+      "804/804 [==============================] - 0s 505us/step - loss: 0.5876 - accuracy: 0.6934\n",
+      "Epoch 52/75\n",
+      "804/804 [==============================] - 0s 500us/step - loss: 0.5866 - accuracy: 0.6933\n",
+      "Epoch 53/75\n",
+      "804/804 [==============================] - 0s 504us/step - loss: 0.5866 - accuracy: 0.6962\n",
+      "Epoch 54/75\n",
+      "804/804 [==============================] - 0s 497us/step - loss: 0.5859 - accuracy: 0.6961\n",
+      "Epoch 55/75\n",
+      "804/804 [==============================] - 0s 501us/step - loss: 0.5861 - accuracy: 0.6966\n",
+      "Epoch 56/75\n",
+      "804/804 [==============================] - 0s 505us/step - loss: 0.5852 - accuracy: 0.6979\n",
+      "Epoch 57/75\n",
+      "804/804 [==============================] - 0s 509us/step - loss: 0.5852 - accuracy: 0.6955\n",
+      "Epoch 58/75\n",
+      "804/804 [==============================] - 0s 511us/step - loss: 0.5851 - accuracy: 0.6973\n",
+      "Epoch 59/75\n",
+      "804/804 [==============================] - 0s 517us/step - loss: 0.5852 - accuracy: 0.6961\n",
+      "Epoch 60/75\n",
+      "804/804 [==============================] - 0s 510us/step - loss: 0.5849 - accuracy: 0.6969\n",
+      "Epoch 61/75\n",
+      "804/804 [==============================] - 0s 508us/step - loss: 0.5848 - accuracy: 0.6973\n",
+      "Epoch 62/75\n",
+      "804/804 [==============================] - 0s 526us/step - loss: 0.5847 - accuracy: 0.6970\n",
+      "Epoch 63/75\n",
+      "804/804 [==============================] - 0s 521us/step - loss: 0.5846 - accuracy: 0.6961\n",
+      "Epoch 64/75\n",
+      "804/804 [==============================] - 0s 509us/step - loss: 0.5846 - accuracy: 0.7002\n",
+      "Epoch 65/75\n",
+      "804/804 [==============================] - 0s 507us/step - loss: 0.5838 - accuracy: 0.6964\n",
+      "Epoch 66/75\n",
+      "804/804 [==============================] - 0s 502us/step - loss: 0.5833 - accuracy: 0.6995\n",
+      "Epoch 67/75\n",
+      "804/804 [==============================] - 0s 507us/step - loss: 0.5834 - accuracy: 0.6998\n",
+      "Epoch 68/75\n",
+      "804/804 [==============================] - 0s 522us/step - loss: 0.5839 - accuracy: 0.6981\n",
+      "Epoch 69/75\n",
+      "804/804 [==============================] - 0s 518us/step - loss: 0.5840 - accuracy: 0.6982\n",
+      "Epoch 70/75\n",
+      "804/804 [==============================] - 0s 519us/step - loss: 0.5826 - accuracy: 0.6993\n",
+      "Epoch 71/75\n",
+      "804/804 [==============================] - 0s 514us/step - loss: 0.5832 - accuracy: 0.6977\n",
+      "Epoch 72/75\n",
+      "804/804 [==============================] - 0s 516us/step - loss: 0.5819 - accuracy: 0.6989\n",
+      "Epoch 73/75\n",
+      "804/804 [==============================] - 0s 510us/step - loss: 0.5813 - accuracy: 0.7005\n",
+      "Epoch 74/75\n",
+      "804/804 [==============================] - 0s 511us/step - loss: 0.5824 - accuracy: 0.7008\n",
+      "Epoch 75/75\n",
+      "804/804 [==============================] - 0s 509us/step - loss: 0.5818 - accuracy: 0.6983\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the model\n",
+    "fit_model = nn.fit(X_train, y_train, epochs=75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "268/268 - 0s - loss: 0.5810 - accuracy: 0.7036\n",
+      "Loss: 0.5810101628303528, Accuracy: 0.7035568356513977\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_loss, model_accuracy = nn.evaluate(X_test,y_test,verbose=2)\n",
+    "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export our model to HDF5 file\n",
+    "nn.save(\"AlphabetSoupCharity_Optimization.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
